add robl /src/* routes for the intro

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
 				],
 				packetDump: false,
 				skipServerList: true, // this demo only has 1 server configured, so use it
-				skipIntro: true,
+				skipIntro: true, // optional. skip intro where you can drop your client assets
 				clientVersionMode: 'PacketVer',
 				// forceUseAddress: true,
 				worldMapSettings: { // Settings for world map.
