--- a/public/index.html
+++ b/public/index.html
@@ -11,61 +11,7 @@
 	<link rel="icon" href="favicon.svg" sizes="any">
 	<link rel="manifest" href="manifest.json" />
 	<link rel="stylesheet" href="styles.css" />
-	<script type="text/javascript">
-		window.addEventListener("load", (event) => {
-			window.ROConfig = {
-				development: false,
-				remoteClient: window.location.protocol + "//127.0.0.1/", // e.g. "https://127.0.0.1/"
-				servers: [
-					{
-						display: 'Local server',
-						desc: "Local server",
-						address: '127.0.0.1',
-						port: 6900,
-						version: 46,
-						langtype: 240, // 240=UTF-8
-						packetver: 20131223, // must match the server
-						packetKeys: false, // must disable packet obfuscation
-						forceUseAddress: false,
-						renewal: false, // Game mode PRE-RENEWAL or RENEWAL
-						socketProxy: `${window.location.protocol == 'https:' ? 'wss' : 'ws'}://127.0.0.1/`,
-						adminList: [/*2000000*/],
-						aura: { defaultLv: 99, },
-						enableHomunAutoFeed: true, // allow autofeed in older clients
-						//homunAutoFeedTimeMs: 10000, // default 60000
-					},
-				],
-				packetDump: false,
-				skipServerList: true, // this demo only has 1 server configured, so use it
-				skipIntro: true, // optional. skip intro where you can drop your client assets
-				clientVersionMode: 'PacketVer',
-				// forceUseAddress: true,
-				worldMapSettings: { // Settings for world map.
-					episode: 98, // Episode content to show (0-98, eg:14.2, default:98 = latest)
-					add: [],     // Optional, Array of maps to custom show  (eg: ['rachel', 'ra_fild01'])
-					remove: []   // Optional, Array of maps to custom remove (eg: ['alberta', 'pay_fild03'])
-				},
-				plugins: {},
-				clientHash: null,
-				enableConsole: true,
-				disableConsole: false,
-				enableCashShop: false,
-				enableBank: false,
-				enableMapName: false,
-				enableRefineUI: false,
-				enableDmgSuffix: false,
-				enableCheckAttendance: false,
-				ThirdPersonCamera: false,
-				FirstPersonCamera: false,
-				CameraMaxZoomOut: 5,
-				loadLua: false, // when you have old client like 2013 without all lua/lub files set this to false
-			};
-			var script = document.createElement('script');
-			script.type = 'text/javascript';
-			script.src = 'Online.js';
-			document.getElementsByTagName('body')[0].appendChild(script);
-		});
-	</script>
+	<script src="index.js" type="module"></script>
 </head>
 
 <body>
